<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:scaleType="centerCrop"
        android:src="@drawable/paywall"
        tools:ignore="MissingConstraints" />

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/paywall_background"
        app:layout_constraintTop_toBottomOf="@id/backgroundImage" />

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText"
        style="@style/RobotoTitleWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_250dp"
        android:text="@string/plantapp_premium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/closeButton" />

    <TextView
        android:id="@+id/subtitleText"
        style="@style/RobotoDescriptionWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:text="@string/access_all_features"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:layout_goneMarginTop="@dimen/margin_24dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/paywallCardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewCards">

        <!-- 1 Month Plan -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardOneMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            app:cardBackgroundColor="@android:color/transparent"
            android:padding="@dimen/margin_14dp"
            app:cardCornerRadius="@dimen/margin_20dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/margin_16dp">

                <!-- Radio -->
                <RadioButton
                    android:id="@+id/radioOneMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/button_green"
                    android:layout_marginEnd="@dimen/margin_5dp" />

                <!-- Texts -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/RobotoDescriptionWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1_month" />

                    <TextView
                        style="@style/RobotoDescriptionWhiteSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2_99_month_auto_renewable" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- 1 Year Plan -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardOneYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:padding="@dimen/margin_14dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/margin_20dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/margin_16dp">

                <!-- Radio -->
                <RadioButton
                    android:id="@+id/radioOneYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/margin_5dp" />

                <!-- Texts -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/RobotoDescriptionWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_1_year" />

                    <TextView
                        style="@style/RobotoDescriptionWhiteSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_3_days_free_then_529_99_year" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Footer Texts -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tryFreeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:background="@drawable/rounded_button"
        android:paddingVertical="@dimen/margin_16dp"
        android:text="@string/try_free_for_3_days"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paywallCardContainer"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/footerTextFirst"
        style="@style/RobotoDescriptionWhiteSmallest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintBottom_toTopOf="@id/footerTextSecond"
        android:gravity="center"
        android:text="@string/after_the_3_day_free_trial_period_you_ll_be_charged_274_99_per_year_unless_you_cancel_before_the_trial_expires_yearly_subscription_is_auto_renewable"
        app:layout_constraintTop_toBottomOf="@id/tryFreeButton" />

    <TextView
        android:id="@+id/footerTextSecond"
        style="@style/RobotoDescriptionWhiteSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:gravity="center"
        android:text="@string/terms_privacy_restore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footerTextFirst" />

</androidx.constraintlayout.widget.ConstraintLayout>
