<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Background -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/plantImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/start_plant"
        android:scaleType="center"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title and Description -->
    <LinearLayout
        android:id="@+id/contentContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_32dp"
        android:paddingBottom="@dimen/margin_22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleText"
            style="@style/TextAppearance.RobotoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/welcome_to_plantapp"
            android:layout_marginBottom="@dimen/margin_8dp"/>

        <TextView
            android:id="@+id/descriptionText"
            style="@style/TextAppearance.RobotoDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/identify_more_than_3000_plants_and_88_accuracy" />
    </LinearLayout>


    <!-- button + terms -->
    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/getStartedButton"
            android:background="@drawable/rounded_button"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_default"
            android:padding="@dimen/margin_16dp"
            android:text="@string/get_started" />

        <TextView
            android:id="@+id/termsText"
            style="@style/TextAppearance.RobotoDescriptionSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_28dp"
            android:text="@string/by_tapping_next_you_are_agreeing_to_plantid_nterms_of_use_privacy_policy" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
