<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/greetingText"
        style="@style/RobotoDescriptionMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_48dp"
        android:text="@string/hi_plant_lover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeText"
        style="@style/RobotoTitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginTop="@dimen/margin_6dp"
        android:text="@string/good_afternoon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetingText" />

    <FrameLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@drawable/search_bar_background"
        app:layout_constraintTop_toBottomOf="@id/timeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48dp"
            android:hint="@string/search_for_plants"
            android:background="@android:color/white"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="@dimen/margin_8dp"
            android:layout_marginHorizontal="@dimen/margin_20dp"
            android:inputType="text"
            android:textSize="@dimen/text_16dp" />
    </FrameLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/premiumBanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginHorizontal="@dimen/margin_20dp"
        app:cardCornerRadius="@dimen/radius_12dp"
        android:backgroundTint="@color/home_premium_card_bg_color"
        app:layout_constraintTop_toBottomOf="@id/searchContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_14dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mail_icon"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/free_premium_available_ntap_to_upgrade_your_account"
                android:textColor="@color/home_premium_card_text_color"
                android:layout_weight="1"
                android:paddingStart="12dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_icon"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/articleRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:paddingStart="@dimen/margin_20dp"
        android:paddingTop="@dimen/margin_24dp"
        app:layout_constraintTop_toBottomOf="@id/premiumBanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!--<androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@id/articleRecyclerView"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        android:padding="20dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"/>
-->

</androidx.constraintlayout.widget.ConstraintLayout>